--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "mathJS",
     "TDD"
   ],
-  "author": "Kevin",
+  "author": "globalavocado",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.3",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-webdriver": "^1.0.0",
-    "mocha": "^2.4.5",
-    "wdio-mocha-framework": "^0.2.12",
+    "mocha": "^5.2.0",
+    "wdio-mocha-framework": "^0.6.3",
     "webdriverio": "^4.0.5"
   }
 }
